# cookiecutter-pypackage

./: .env  README.md  cookiecutter.json  zensical.toml
.github/: dependabot.yml
.github/workflows/: dependabot-reviewer.yml  docs.yml  main.yml
docs/: index.md  prompts.md  tips.md  tutorial.md
docs/features/: code-quality.md  development.md  documentation.md  justfile.md
hooks/: post_gen_project.py
{{ cookiecutter.project_slug }}/: AUTHORS.md  CHANGELOG.md  CITATION.cff  LICENSE  MANIFEST.in  Makefile  README.md  environment.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
{{ cookiecutter.project_slug }}/.github/workflows/: dependabot-reviewer.yml  main.yml
{{ cookiecutter.project_slug }}/docs/: _config.yml  conf.py  index.md  installation.md  myst.yml  references.bib
{{ cookiecutter.project_slug }}/docs_old/: index.md
{{ cookiecutter.project_slug }}/docsrc/: _config.yml  _sphinx_config.py  _toc.yml  bibliography.md
{{ cookiecutter.project_slug }}/src/{{ cookiecutter.package_name }}/: __init__.py  cli.py  {{ cookiecutter.package_name }}.py
{{ cookiecutter.project_slug }}/tests/: __init__.py  conftest.py  test_{{cookiecutter.package_name}}.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.package_name }}/: __init__.py  cli.py  {{ cookiecutter.package_name }}.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.package_name }}/tests/: __init__.py  test_{{cookiecutter.package_name}}.py
