[build-system]
requires = ["setuptools @ git+https://github.com/pypa/setuptools.git@main"]
# TODO: consider hatchling for built
#requires = ["hatchling"]
#build-backend = "hatchling.build"


[project]
name = "{{ cookiecutter.package_name }}"
description = "{{ cookiecutter.project_short_description }}"
authors = [
  {name = "{{ cookiecutter.project_author }}", email = "{{ cookiecutter.email }}"},
]
readme = "README.md"
license = {file = "LICENSE"}
dynamic = ["version"]
requires-python = ">= 3.8"


#[tool.hatch.build.targets.wheel]
#packages = ["src/{{ cookiecutter.package_name }}"]


[tool.jupytext]
formats = "ipynb,py:percent,md:myst"


[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
    "src",
]
addopts = [
    "--import-mode=importlib",
    "-ra -q"
]


[tool.flake8]
max-line-length = 80
max-complexity = 10
