[build-system]
requires = ["setuptools @ git+https://github.com/pypa/setuptools.git@main", "wheel"]
build-backend = "setuptools.build_meta"
# TODO: consider hatchling for built

[project]
name = "{{ cookiecutter.package_name }}"
description = "{{ cookiecutter.project_short_description }}"
authors = [
  {name = "{{ cookiecutter.project_author }}", email = "{{ cookiecutter.email }}"},
]
readme = "README.md"
license = {file = "LICENSE"}
dynamic = ["version"]
requires-python = ">= 3.10"
dependencies = []


[project.scripts]
{{ cookiecutter.project_slug }} = "{{ cookiecutter.package_name }}.cli:main"


[tool.setuptools.dynamic]
version = {attr = "{{ cookiecutter.package_name }}.__version__"}


[tool.setuptools.packages.find]
where = ["src"]


[tool.jupytext]
formats = "ipynb,py:percent,md:myst"


[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
    "src",
]
addopts = [
    # "--import-mode=importlib",
    "--doctest-modules",
    "--doctest-continue-on-failure",
    "-ra -v",
    "--cov=./src",
    "--cov-report=xml",
    "--cov-report=html",
    "--cov-report=term-missing"
]


[tool.flake8]
max-line-length = 80
max-complexity = 10
