[project]
version = "0.1.0"
authors = [
  {name = "{{ cookiecutter.project_author }}", email = "{{ cookiecutter.email }}"},
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">= 3.10"
dependencies = [
  "click",
  "colorama",
  "dask",
  "Deprecated",
  "docopt",
  "ipykernel",
  "ipython",
  "ipywidgets",
  "jupyter-book",
  "jupyterbook-latex",
  "jupyterlab",
  "jupyternotify",
  "jupytext",
  "markdown",
  "matplotlib",
  "mystmd",
  "nodejs",
  "numpy",
  "pandas",
  "python-dotenv",
  "rich",
  "tqdm",
  "typer",
  "xarray"
]


[project.scripts]
{{ cookiecutter.project_slug }} = "{{ cookiecutter.package_name }}.cli:main"


[tool.setuptools.dynamic]
version = {attr = "{{ cookiecutter.package_name }}.__version__"}


[tool.setuptools.packages.find]
where = ["src"]
[dependency-groups]
dev = [
  {include-group = "lint"},
  {include-group = "test"}
]
lint = [
  "flake8",
  "ruff"
]
test = [
  "pytest",
  "pytest-cov"
]
docs = [
  "furo",
  "jupyter-book",
  "jupytext",
  "lxml_html_clean",
  "myst-parser",
  "nbsphinx",
  "pydata-sphinx-theme",
  "rinohtype",
  "Sphinx",
  "sphinx-autoapi",
  "sphinx-autodoc-defaultargs",
  "sphinx-autodoc-typehints",
  "sphinx-book-theme",
  "sphinx-comments",
  "sphinx-immaterial",
  "sphinx-issues",
  "sphinx-material",
  "sphinx-rtd-theme",
  "sphinx-tabs",
  "sphinx-toolbox",
  "sphinxcontrib-apidoc",
  "sphinxcontrib-bibtex",
  "sphinxcontrib-htmlhelp",
  "sphinxcontrib-images",
  "sphinxcontrib-mermaid",
  "sphinxcontrib-napoleon",
  "sphinxcontrib-napoleon2"
]


[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"



[tool.jupytext]
formats = "ipynb,py:percent,md:myst"


[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
    "src",
]
addopts = [
    # "--import-mode=importlib",
    "--doctest-modules",
    "--doctest-continue-on-failure",
    "-ra -v",
    "--cov=./src",
    "--cov-report=xml",
    "--cov-report=html",
    "--cov-report=term-missing"
]


[tool.flake8]
max-line-length = 80
max-complexity = 10


[tool.cruft]
skip = [".git/"]
